k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: goormthon-1.goorm.training
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
